--- a/Notebook Tutorial 1_students.ipynb
+++ b/Notebook Tutorial 1_students.ipynb
@@ -89,12 +89,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Download libraries\n",
+    "!pip install numpy pandas matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "318c1961-bfea-4090-88ca-0d61996c43c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os as os\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93235dda-0946-4bd2-8d30-3bce105af43a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the Revlin function\n",
     "def Revlin(X, P):\n",
     "    return P * X"
@@ -223,7 +244,7 @@
    "outputs": [],
    "source": [
     "def process_data(sheet_range):\n",
-    "    path = os.getcwd()+'\\\\Data\\\\'\n",
+    "    path = os.getcwd()+'/Data/'\n",
     "    A = pd.read_excel(path+\"Datas_trim.xlsx\", usecols='J:M', skiprows=sheet_range, nrows=6).to_numpy()\n",
     "    n = 6\n",
     "    Z = np.ones((n, n))\n",
